objects/Journey__c.object
<CustomObject>
    <fields>
        <fullName>Account_Classification__c</fullName>
        <description>Shows the classification of the account to which the journey is related to</description>
        <formula>IF(Primary_Lead__c != NULL, 
IF(AND(Primary_Lead__r.Account__r.Lighthouse_Account__c,Primary_Lead__r.Account__r.Named_Account__c),'Lighthouse &amp; Named Account', 
IF(Primary_Lead__r.Account__r.Named_Account__c, 'Named Account', 
IF(Primary_Lead__r.Account__r.Lighthouse_Account__c, 'LightHouse Account', 'N/A'))), 

IF(Primary_Contact__c != NULL, 
IF(AND(Primary_Contact__r.Account.Lighthouse_Account__c,Primary_Contact__r.Account.Named_Account__c), 'Lighthouse &amp; Named Account', 
IF(Primary_Contact__r.Account.Named_Account__c , 'Named Account', 
IF(Primary_Contact__r.Account.Lighthouse_Account__c, 'LightHouse Account','N/A'))), 'N/A'))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the classification of the account to which the journey is related to</inlineHelpText>
        <label>Account Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Owner__c</fullName>
        <formula>Owner:User.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affiliate_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affiliate Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <description>This field is used to store the alternate email id.</description>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Alternate_Email__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Alternate_Email__c,'False'))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authority_Assessment__c</fullName>
        <description>Better way to collect authority info post discovery call when a journey is not a handoff but a nurture journey</description>
        <label>Authority Assessment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Auto_Complete_Expiration__c</fullName>
        <label>Auto-Complete/Expiration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BANT_Assessment__c</fullName>
        <description>Better way to collect this info post discovery call when a journey is not a handoff but a nurture journey</description>
        <label>BANT Assessment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Budget_Assessment__c</fullName>
        <description>Better way to collect budget info post discovery call when a journey is not a handoff but a nurture journey</description>
        <label>Budget Assessment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Building_Interested_In__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Building Interested In</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Journeys</relationshipLabel>
        <relationshipName>Journeys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CampaignId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It contains related Campaign Id</description>
        <inlineHelpText>It contains related Campaign Id</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Related Campaigns</relationshipLabel>
        <relationshipName>Journeys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <formula>TEXT( CampaignId__r.Type )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>/*IF( ISNULL(Primary_Contact__c), Primary_Lead__r.Company, Primary_Contact__r.Company_Name__c)*/

IF( Primary_Lead__c != NULL , Primary_Lead__r.Company, IF( Primary_Contact__c != NULL, Primary_Contact__r.Account.Name, "" ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Broker__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Contact_Broker__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Contact_Broker__c, false ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Broker Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_of_Activities__c</fullName>
        <description>Count of Activities under a Journey. Controlled by a Lookup Rollup Summary. Used to manage a workflow which changes the Journey Status to 'Trying to reach'</description>
        <label>Count of Activities</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Desk__c</fullName>
        <description>This is a temporary field to capture the Number of Desk for the Journey</description>
        <label>Number of Desks</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Meetings__c</fullName>
        <description>Count of Activities with type = 'Meeting' under a Journey. Controlled by a Lookup Rollup Summary. Used to manage a workflow which updates 'Discovery Call Completed'</description>
        <label>Count of Meetings</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Countjourney__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>Stores the Country Code of the Journey from where the Journey belongs</description>
        <inlineHelpText>Stores the Country Code of the Journey from where the Journey belongs</inlineHelpText>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>DZ</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BY</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BZ</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BW</fullName>
                </value>
                <value>
                    <fullName>BV</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>IO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discovery_Call_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NMD Outbound Discovery Call had been completed. Managed by Workflow</description>
        <label>Discovery Call Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <formula>OR (
AND(Primary_Lead__c != NULL , Primary_Lead__r.DoNotCall), AND(Primary_Contact__c != NULL, Primary_Contact__r.DoNotCall), Contact_Broker__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Einstein_Lead_Score__c</fullName>
        <formula>ENCODED:[treatNullAsNull]{!ID:00NF000000DSUDp.ScoreIntelligence.Score}</formula>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out__c</fullName>
        <formula>OR(AND(Primary_Lead__c != NULL , Primary_Lead__r.HasOptedOutOfEmail),AND(Primary_Contact__c != NULL, Primary_Contact__r.HasOptedOutOfEmail), Contact_Broker__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>If Primary_Lead is exists, will return Primary Lead's Email otherwise It will check for Primary_Contact, If contact exists will return Email of Contact.</description>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Email , IF( Primary_Contact__c != NULL, Primary_Contact__r.Email , "" ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email(old)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.FirstName , IF( Primary_Contact__c != NULL, Primary_Contact__r.FirstName, "" ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForceCompletedOn__c</fullName>
        <label>ForceCompletedOn</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ForceCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ForceCompleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Time_Employees__c</fullName>
        <description>This field will copy the number of Employees from lead if Primary Lead is there else it will copy the same from Contact.</description>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Number_of_Full_Time_Employees__c, IF( Primary_Contact__c != NULL,Primary_Contact__r.Account.Account_FTE__c,0 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will copy the number of Employees from lead if Primary Lead is there else it will copy the same from Contact.</inlineHelpText>
        <label>Account FTE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>Shows the Geography of HQ market.</description>
        <formula>IF(ISBLANK(Primary_Lead__c), Primary_Contact__r.Geography__r.Name,Primary_Lead__r.Geography__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the Geography of HQ market.</inlineHelpText>
        <label>Geography</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_City__c</fullName>
        <description>If Lead is associated with the Journey, then the City will be populated from Lead and If Contact is associated with the Journey, then the City will be populated from Account of the related contact</description>
        <formula>IF(ISBLANK(Primary_Lead__c),IF(ISBLANK(Primary_Contact__r.MailingAddress),Primary_Contact__r.Account.BillingCity,Primary_Contact__r.MailingCity),Primary_Lead__r.City)</formula>
        <label>HQ City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_Country__c</fullName>
        <description>If Lead is associated with the Journey, then the Country will be populated from Lead and If Contact is associated with the Journey, then the Country will be populated from Account of the related contact</description>
        <formula>IF(ISBLANK(Primary_Lead__c),IF(ISBLANK(Primary_Contact__r.MailingAddress),Primary_Contact__r.Account.BillingCountry,Primary_Contact__r.MailingCountry),Primary_Lead__r.Country)</formula>
        <label>HQ Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_State__c</fullName>
        <description>If Lead is associated with the Journey, then the State will be populated from Lead and If Contact is associated with the Journey, then the State will be populated from Account of the related contact</description>
        <formula>IF(ISBLANK(Primary_Lead__c),IF(ISBLANK(Primary_Contact__r.MailingAddress),Primary_Contact__r.Account.BillingState,Primary_Contact__r.MailingState),Primary_Lead__r.State)</formula>
        <label>HQ State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_Street__c</fullName>
        <description>If Lead is associated with the Journey, then the Street will be populated from Lead and If Contact is associated with the Journey, then the Street will be populated from Account of the related contact</description>
        <formula>IF(ISBLANK(Primary_Lead__c),IF(ISBLANK(Primary_Contact__r.MailingAddress),Primary_Contact__r.Account.BillingStreet,Primary_Contact__r.MailingStreet),Primary_Lead__r.Street)</formula>
        <label>HQ Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_ZIP__c</fullName>
        <description>If Lead is associated with the Journey, then the Zip Code will be populated from Lead and If Contact is associated with the Journey, then the Zip Code will be populated from Account of the related contact</description>
        <formula>IF(ISBLANK(Primary_Lead__c),IF(ISBLANK(Primary_Contact__r.MailingAddress),Primary_Contact__r.Account.BillingPostalCode,Primary_Contact__r.MailingPostalCode),Primary_Lead__r.PostalCode)</formula>
        <label>HQ ZIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handoff_Probability__c</fullName>
        <description>to help NMD Outbound prioritize our in contact and nurture journeys</description>
        <label>Handoff Probability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>75%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_Kind__c</fullName>
        <formula>Primary_Contact__r.ID_Kind__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Kind</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_in_Number_of_Desks__c</fullName>
        <label>Interested in Number of Desk(s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interesting_Moments__c</fullName>
        <label>Interesting Moments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsAuto_Complete_Expiration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAuto-Complete/Expiration?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Broker_Journey__c</fullName>
        <formula>CONTAINS(TEXT(Lead_Source__c) , "Referral")</formula>
        <label>Is Broker Journey?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Lead_Completed__c</fullName>
        <formula>OR( ISPICKVAL(Primary_Lead__r.Status, 'Qualified'), ISPICKVAL(Primary_Lead__r.Status, 'Nurture'), ISPICKVAL(Primary_Lead__r.Status, 'Unqualified') )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Lead Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <description>This field captures the name of Job title</description>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Journey_Market__c</fullName>
        <description>Show the HQ market of the Lead</description>
        <formula>IF(ISBLANK(Primary_Lead__c), Primary_Contact__r.Contact_Market__r.Name,Primary_Lead__r.Lead_Market__r.Name)</formula>
        <inlineHelpText>Show the HQ market of the Lead</inlineHelpText>
        <label>HQ Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Interesting_Moment_Description__c</fullName>
        <label>Last Interesting Moment Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Interesting_Moment_Type__c</fullName>
        <label>Last Interesting Moment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.LastName, IF( Primary_Contact__c != NULL, Primary_Contact__r.LastName, "" ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadSource_Sub_Type__c</fullName>
        <label>Lead Source Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Source_Subtype</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Additional_Score__c</fullName>
        <label>Lead Additional Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Behavioral_Score__c</fullName>
        <formula>/*IF( ISNULL(Primary_Contact__c), Primary_Lead__r.Behavioral_Lead_Score__c, Primary_Contact__r.Behavioral_Lead_Score__c)*/ 

IF(Primary_Lead__c != NULL, Primary_Lead__r.Behavioral_Lead_Score__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Behavioral_Lead_Score__c, 0 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Behavioral Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_ID__c</fullName>
        <formula>IF(  ISBLANK( Primary_Contact__c ),  Primary_Lead__r.Id ,  Primary_Contact__r.Id )</formula>
        <label>Lead/Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Demographic_Score_DateTime__c</fullName>
        <formula>/*IF( ISNULL(Primary_Contact__c), Primary_Lead__r.Behavioral_Lead_Score__c, Primary_Contact__r.Behavioral_Lead_Score__c)*/ 

/*IF(Primary_Lead__c != NULL, Primary_Lead__r.Lead_Demographic_Score_DateTime__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Lead_Demographic_Score_DateTime__c, NULL))*/

/*If Journey is created for Secondary Lead then, the Lead Score Date/Time of Secondary Lead will Be shown in this field and if it is primary lead/Contact then, the Lead Score Date/Time of Primary Lead/Contact will be shown */

IF(!ISNULL(SecondaryLead_Demographic_Score_DateTime__c),SecondaryLead_Demographic_Score_DateTime__c,IF(Primary_Lead__c != NULL, Primary_Lead__r.Lead_Demographic_Score_DateTime__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Lead_Demographic_Score_DateTime__c, NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Demographic Score DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Demographic_Score__c</fullName>
        <formula>IF(Secondary_Lead_Demographic_Score__c &gt; 0,Secondary_Lead_Demographic_Score__c * 100, IF(Primary_Lead__c &lt;&gt; NULL,Primary_Lead__r.Lead_Demographic_Score__c * 100,Primary_Contact__r.Lead_Demographic_Score__c * 100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Demographic Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Id__c</fullName>
        <inlineHelpText>This field stored the Lead Id</inlineHelpText>
        <label>Lead Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Primary_Score__c</fullName>
        <label>Lead Primary Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <description>Details of Lead Source from where Tour was booked. e.g. specific form of the website.</description>
        <label>Lead Source Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <description>Source of the Tour, how it was booked.</description>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>42 Floors</fullName>
                </value>
                <value>
                    <fullName>ads-twitter</fullName>
                </value>
                <value>
                    <fullName>Adwords</fullName>
                </value>
                <value>
                    <fullName>Affiliate Referral</fullName>
                </value>
                <value>
                    <fullName>Broker Referral</fullName>
                </value>
                <value>
                    <fullName>Cold Call</fullName>
                </value>
                <value>
                    <fullName>Cold Email</fullName>
                </value>
                <value>
                    <fullName>Community Team Referral</fullName>
                </value>
                <value>
                    <fullName>Craigslist Ad</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Guest</fullName>
                </value>
                <value>
                    <fullName>Guest Wifi</fullName>
                </value>
                <value>
                    <fullName>Id</fullName>
                </value>
                <value>
                    <fullName>Inbound Call</fullName>
                </value>
                <value>
                    <fullName>Inbound Email</fullName>
                </value>
                <value>
                    <fullName>Landing Page Campaign</fullName>
                </value>
                <value>
                    <fullName>LinkedIn Paid</fullName>
                </value>
                <value>
                    <fullName>Member Referral</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>Newsletter Campaign</fullName>
                </value>
                <value>
                    <fullName>Olark Chat</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Referral</fullName>
                </value>
                <value>
                    <fullName>Outbound Email/Cold Call</fullName>
                </value>
                <value>
                    <fullName>Partner Referral</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Press Campaign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <inlineHelpText>Populated by the website and users, tells marketing cloud what language to send communication, including drips, tour confirmations, reminders, ETC...</inlineHelpText>
        <label>Locale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>af</fullName>
                </value>
                <value>
                    <fullName>af-ZA</fullName>
                </value>
                <value>
                    <fullName>sq</fullName>
                </value>
                <value>
                    <fullName>sq-AL</fullName>
                </value>
                <value>
                    <fullName>gsw-FR</fullName>
                </value>
                <value>
                    <fullName>am-ET</fullName>
                </value>
                <value>
                    <fullName>ar</fullName>
                </value>
                <value>
                    <fullName>ar-DZ</fullName>
                </value>
                <value>
                    <fullName>ar-BH</fullName>
                </value>
                <value>
                    <fullName>ar-EG</fullName>
                </value>
                <value>
                    <fullName>ar-IQ</fullName>
                </value>
                <value>
                    <fullName>ar-JO</fullName>
                </value>
                <value>
                    <fullName>ar-KW</fullName>
                </value>
                <value>
                    <fullName>ar-LB</fullName>
                </value>
                <value>
                    <fullName>ar-LY</fullName>
                </value>
                <value>
                    <fullName>ar-MA</fullName>
                </value>
                <value>
                    <fullName>ar-OM</fullName>
                </value>
                <value>
                    <fullName>ar-QA</fullName>
                </value>
                <value>
                    <fullName>ar-SA</fullName>
                </value>
                <value>
                    <fullName>ar-SY</fullName>
                </value>
                <value>
                    <fullName>ar-TN</fullName>
                </value>
                <value>
                    <fullName>ar-AE</fullName>
                </value>
                <value>
                    <fullName>ar-YE</fullName>
                </value>
                <value>
                    <fullName>hy</fullName>
                </value>
                <value>
                    <fullName>hy-AM</fullName>
                </value>
                <value>
                    <fullName>as-IN</fullName>
                </value>
                <value>
                    <fullName>az</fullName>
                </value>
                <value>
                    <fullName>az-Cyrl-AZ</fullName>
                </value>
                <value>
                    <fullName>az-Latn-AZ</fullName>
                </value>
                <value>
                    <fullName>ba-RU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Locations_Interested__c</fullName>
        <label>Locations Interested</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>32 Village</fullName>
                </value>
                <value>
                    <fullName>AMS-Labs</fullName>
                </value>
                <value>
                    <fullName>AMS-Metropool</fullName>
                </value>
                <value>
                    <fullName>AMS-Strawinskylaan</fullName>
                </value>
                <value>
                    <fullName>AMS-Weteringschans</fullName>
                </value>
                <value>
                    <fullName>ARC-Andres Arguibel 2860</fullName>
                </value>
                <value>
                    <fullName>ARC-Avenida Corrientes 800</fullName>
                </value>
                <value>
                    <fullName>ARC-Ing. Enrique Butty 275</fullName>
                </value>
                <value>
                    <fullName>ARC-Libertador 1000</fullName>
                </value>
                <value>
                    <fullName>ARC- Torre Bellini</fullName>
                </value>
                <value>
                    <fullName>ARN-Urban Escape</fullName>
                </value>
                <value>
                    <fullName>ATL-1372 Peachtree</fullName>
                </value>
                <value>
                    <fullName>ATL-3280 Peachtree Road NE</fullName>
                </value>
                <value>
                    <fullName>ATL-Colony Square</fullName>
                </value>
                <value>
                    <fullName>ATL-Tower Place</fullName>
                </value>
                <value>
                    <fullName>AUS-Congress</fullName>
                </value>
                <value>
                    <fullName>AUS-Domain</fullName>
                </value>
                <value>
                    <fullName>AUS-Labs</fullName>
                </value>
                <value>
                    <fullName>AUS-University Park</fullName>
                </value>
                <value>
                    <fullName>AUS-Westview</fullName>
                </value>
                <value>
                    <fullName>AUS-WeWork 801 Barton Springs</fullName>
                </value>
                <value>
                    <fullName>BCN-Diagonal 444</fullName>
                </value>
                <value>
                    <fullName>BHZ-Boulevard Shopping</fullName>
                </value>
                <value>
                    <fullName>BKK-Asia Centre</fullName>
                </value>
                <value>
                    <fullName>BKK-T-One Building</fullName>
                </value>
                <value>
                    <fullName>BKN-109 S 5th St</fullName>
                </value>
                <value>
                    <fullName>BKN-Brooklyn Heights</fullName>
                </value>
                <value>
                    <fullName>BKN-Dumbo Heights (Prospect)</fullName>
                </value>
                <value>
                    <fullName>BKN-Dumbo Heights (Sands)</fullName>
                </value>
                <value>
                    <fullName>BKN-Montague St</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Looking_For_Number_Of_Desk__c</fullName>
        <description>This field will copy Interested in Number of Desk from Lead if Primary Lead is there else it will copy the same from primary contact.</description>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Interested_in_Number_of_Desks__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Looking_For_Number_Of_Desk__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will copy Interested in Number of Desk from Lead if Primary Lead is there else it will copy the same from primary contact.</inlineHelpText>
        <label>Looking For Number Of Desk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>